@startuml
title OpenData - Plugin Class Model

interface DatasetPlugin {
  + descriptor() : PluginDescriptor
  + configurationSchema() : ConfigurationSchema
  + execute(context : PluginExecutionContext) : RunReport
}

class PluginRegistry {
  + register(plugin : DatasetPlugin)
  + resolve(id : String) : DatasetPlugin
  + list() : List<PluginDescriptor>
}

class PluginDescriptor {
  + id : String
  + displayName : String
  + version : String
  + description : String
  + defaultResource : String
}

class PluginExecutionContext {
  + runId : RunId
  + configuration : PluginConfiguration
  + downloadService : DownloadService
  + sourceFileStore : SourceFileStore
  + transactionManager : TransactionManager
  + dryRun : boolean
}

class OfgemPlugin
class RunReport
class ConfigurationSchema
class PluginConfiguration

DatasetPlugin <|.. OfgemPlugin
PluginRegistry o-- DatasetPlugin
DatasetPlugin --> PluginDescriptor
DatasetPlugin --> ConfigurationSchema
DatasetPlugin --> PluginExecutionContext
DatasetPlugin --> RunReport
PluginExecutionContext --> PluginConfiguration

@enduml
